<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParadaActivity">

    <EditText
        android:id="@+id/etIdParada"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etNomeParada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnEncontrarParada"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:drawableBottom="@drawable/search_icon_24"
        android:paddingBottom="8dp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etNomeParada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/etIdParada"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etNomeParada"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/nome_parada"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etEnderecoParada"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/endereco_parada"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/spTipoParada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeParada"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/spTipoParada"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="364dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAdicionarParada"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:drawableBottom="@drawable/baseline_add_24"
        android:paddingBottom="8dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spTipoParada"
        app:layout_constraintTop_toBottomOf="@+id/spTipoParada"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnAtualizarParada"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:drawableBottom="@drawable/baseline_update_24"
        android:paddingBottom="8dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btnAdicionarParada"
        app:layout_constraintTop_toBottomOf="@+id/spTipoParada"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnRemoverParada"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:drawableBottom="@drawable/baseline_delete_24"
        android:paddingBottom="8dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btnAtualizarParada"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipoParada"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>